修复部分REI问题